*esc-generator.neon: fixed up php doc url gen +esc-generator.neon: added out file name patterns *esc-generator.php: now manages the chdir +added the manually crafted system concretions

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 * text=auto !eol
 bin/esc-generator.neon -text
 bin/esc-generator.php -text
+etc/esc/AbstractCompleteStreamWrapper.php -text
+etc/esc/DecoratingTrait.php -text
+etc/esc/ICompleteStreamWrapper.php -text
+etc/esc/IhasTraitDecorating.php -text
