+Added another extension to the blacklist: fileinfo

--- a/bin/esc-generator.neon
+++ b/bin/esc-generator.neon
@@ -19,6 +19,7 @@ blacklist.classes:
 	# - SoapClient
 blacklist.exts:
 	- soap	#@todo: soap ext, in all its broken-ness, is using PHP4 style constructors
+	- fileinfo #@todo: @see soap
 
 whitelist.classes:
 	# - StdClass
