[ONX.Core] Fixes issue #2 * Added \Error and \Exception to blacklist. * Modified generator to have classes inherit from core classes when the parent class is in blacklist. * Phing build script now outputs to version tag if ver property is set. + Added v0.4.0

--- a/bin/esc-generator.neon
+++ b/bin/esc-generator.neon
@@ -17,6 +17,8 @@ composername: nxsys/core.esc
 blacklist.classes:
 	# - Closure
 	# - SoapClient
+	- Error
+	- Exception
 blacklist.exts:
 	- soap	#@todo: soap ext, in all its broken-ness, is using PHP4 style constructors
 	- fileinfo #@todo: @see soap
