ESC is now dependent on the uopz extension. Seems to now have 100% extensionality and compatibility. Time will tell if this is as awesome as we hope...

--- a/bin/esc-generator.neon
+++ b/bin/esc-generator.neon
@@ -122,6 +122,8 @@ php.concretions.body.selfret: '''
         return $ret;
 '''
 
+php.concretions.uopz.extend: "uopz_extend(%classname::class, PHP_%classname::class);"
+
 # and now... of course
 # ...the envitable..
 # ------ E D G E   C A S E S ------
